// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PricingPlans rendering tests PricingPlans - currentSubscription defined - test 1`] = `
<div>
  <div
    data-testid="pricing-plans"
  >
    <div
      class="mb-8 flex justify-center"
    >
      <div
        class="inline-flex items-center rounded-full border bg-background p-1 shadow-sm"
      >
        <button
          class="rounded-full px-5 py-2 text-sm font-medium transition-all text-muted-foreground hover:text-foreground"
          data-active="false"
          data-testid="monthly-btn"
        >
          Monatlich
        </button>
        <button
          class="flex items-center gap-2 rounded-full px-5 py-2 text-sm font-medium transition-all bg-primary text-primary-foreground shadow-sm"
          data-active="true"
          data-testid="yearly-btn"
        >
          Jährlich
          <span
            class="inline-flex items-center justify-center rounded-full border font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-secondary/90 px-2 py-0.5 text-xs border-transparent bg-white/20 text-white"
            data-slot="badge"
          >
            Spare 17%
          </span>
        </button>
      </div>
    </div>
    <div
      class="mx-auto grid max-w-6xl gap-8 md:grid-cols-3"
    >
      <div
        class="bg-card text-card-foreground gap-6 rounded-xl border py-6 relative flex flex-col shadow-sm"
        data-slot="card"
        data-testid="pricing-plan"
      >
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-4"
          data-slot="card-header"
        >
          <div
            class="font-semibold text-2xl"
            data-slot="card-title"
          >
            name-0
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="card-description"
          >
            description-0
          </div>
        </div>
        <div
          class="px-6 flex flex-1 flex-col gap-6"
          data-slot="card-content"
        >
          <div>
            <div
              class="flex items-baseline gap-1.5"
            >
              <span
                class="text-4xl font-bold"
              >
                CHF 
                99.99
              </span>
              <span
                class="text-sm text-muted-foreground"
              >
                /
                Jahr
              </span>
            </div>
          </div>
          <ul
            class="space-y-3"
            data-testid="features"
          >
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 5 Prompts
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 3 Bibliotheks-Einträge
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Zugang zum Marktplatz
              </span>
            </li>
          </ul>
        </div>
        <div
          class="flex items-center px-6 [.border-t]:pt-6"
          data-slot="card-footer"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer"
            data-slot="button"
            data-testid="activate-subscription-btn"
          >
            Abonnieren
          </button>
        </div>
      </div>
      <div
        class="bg-card text-card-foreground gap-6 rounded-xl border py-6 relative flex flex-col shadow-sm"
        data-slot="card"
        data-testid="pricing-plan"
      >
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-4"
          data-slot="card-header"
        >
          <div
            class="font-semibold text-2xl"
            data-slot="card-title"
          >
            name-2
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="card-description"
          >
            description-2
          </div>
        </div>
        <div
          class="px-6 flex flex-1 flex-col gap-6"
          data-slot="card-content"
        >
          <div>
            <div
              class="flex items-baseline gap-1.5"
            >
              <span
                class="text-4xl font-bold"
              >
                CHF 
                99.99
              </span>
              <span
                class="text-sm text-muted-foreground"
              >
                /
                Jahr
              </span>
            </div>
          </div>
          <ul
            class="space-y-3"
            data-testid="features"
          >
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 5 Prompts
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 3 Bibliotheks-Einträge
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Zugang zum Marktplatz
              </span>
            </li>
          </ul>
        </div>
        <div
          class="flex items-center px-6 [.border-t]:pt-6"
          data-slot="card-footer"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer"
            data-slot="button"
            data-testid="activate-subscription-btn"
          >
            Abonnieren
          </button>
        </div>
      </div>
      <div
        class="bg-card text-card-foreground gap-6 rounded-xl border py-6 relative flex flex-col shadow-xl ring-2 ring-primary"
        data-slot="card"
        data-testid="pricing-plan"
      >
        <span
          class="inline-flex items-center justify-center rounded-full border text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground [a&]:hover:bg-primary/90 absolute -top-3.5 left-1/2 -translate-x-1/2 gap-1.5 px-3 py-1"
          data-slot="badge"
          data-testid="popular-badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star h-3 w-3 fill-current"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          Beliebtester
        </span>
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-4"
          data-slot="card-header"
        >
          <div
            class="font-semibold text-2xl"
            data-slot="card-title"
          >
            name-1
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="card-description"
          >
            description-1
          </div>
        </div>
        <div
          class="px-6 flex flex-1 flex-col gap-6"
          data-slot="card-content"
        >
          <div>
            <div
              class="flex items-baseline gap-1.5"
            >
              <span
                class="text-4xl font-bold"
              >
                CHF 
                99.99
              </span>
              <span
                class="text-sm text-muted-foreground"
              >
                /
                Jahr
              </span>
            </div>
          </div>
          <ul
            class="space-y-3"
            data-testid="features"
          >
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 5 Prompts
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 3 Bibliotheks-Einträge
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Zugang zum Marktplatz
              </span>
            </li>
          </ul>
        </div>
        <div
          class="flex items-center px-6 [.border-t]:pt-6"
          data-slot="card-footer"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full"
            data-slot="button"
            data-testid="current-btn"
            disabled=""
          >
            Aktueller Plan
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PricingPlans rendering tests PricingPlans - currentSubscription null - test 1`] = `
<div>
  <div
    data-testid="pricing-plans"
  >
    <div
      class="mb-8 flex justify-center"
    >
      <div
        class="inline-flex items-center rounded-full border bg-background p-1 shadow-sm"
      >
        <button
          class="rounded-full px-5 py-2 text-sm font-medium transition-all text-muted-foreground hover:text-foreground"
          data-active="false"
          data-testid="monthly-btn"
        >
          Monatlich
        </button>
        <button
          class="flex items-center gap-2 rounded-full px-5 py-2 text-sm font-medium transition-all bg-primary text-primary-foreground shadow-sm"
          data-active="true"
          data-testid="yearly-btn"
        >
          Jährlich
          <span
            class="inline-flex items-center justify-center rounded-full border font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-secondary/90 px-2 py-0.5 text-xs border-transparent bg-white/20 text-white"
            data-slot="badge"
          >
            Spare 17%
          </span>
        </button>
      </div>
    </div>
    <div
      class="mx-auto grid max-w-6xl gap-8 md:grid-cols-3"
    >
      <div
        class="bg-card text-card-foreground gap-6 rounded-xl border py-6 relative flex flex-col shadow-sm"
        data-slot="card"
        data-testid="pricing-plan"
      >
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-4"
          data-slot="card-header"
        >
          <div
            class="font-semibold text-2xl"
            data-slot="card-title"
          >
            name-0
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="card-description"
          >
            description-0
          </div>
        </div>
        <div
          class="px-6 flex flex-1 flex-col gap-6"
          data-slot="card-content"
        >
          <div>
            <div
              class="flex items-baseline gap-1.5"
            >
              <span
                class="text-4xl font-bold"
              >
                CHF 
                99.99
              </span>
              <span
                class="text-sm text-muted-foreground"
              >
                /
                Jahr
              </span>
            </div>
          </div>
          <ul
            class="space-y-3"
            data-testid="features"
          >
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 5 Prompts
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 3 Bibliotheks-Einträge
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Zugang zum Marktplatz
              </span>
            </li>
          </ul>
        </div>
        <div
          class="flex items-center px-6 [.border-t]:pt-6"
          data-slot="card-footer"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer"
            data-slot="button"
            data-testid="activate-subscription-btn"
          >
            Abonnieren
          </button>
        </div>
      </div>
      <div
        class="bg-card text-card-foreground gap-6 rounded-xl border py-6 relative flex flex-col shadow-sm"
        data-slot="card"
        data-testid="pricing-plan"
      >
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-4"
          data-slot="card-header"
        >
          <div
            class="font-semibold text-2xl"
            data-slot="card-title"
          >
            name-2
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="card-description"
          >
            description-2
          </div>
        </div>
        <div
          class="px-6 flex flex-1 flex-col gap-6"
          data-slot="card-content"
        >
          <div>
            <div
              class="flex items-baseline gap-1.5"
            >
              <span
                class="text-4xl font-bold"
              >
                CHF 
                99.99
              </span>
              <span
                class="text-sm text-muted-foreground"
              >
                /
                Jahr
              </span>
            </div>
          </div>
          <ul
            class="space-y-3"
            data-testid="features"
          >
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 5 Prompts
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 3 Bibliotheks-Einträge
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Zugang zum Marktplatz
              </span>
            </li>
          </ul>
        </div>
        <div
          class="flex items-center px-6 [.border-t]:pt-6"
          data-slot="card-footer"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer"
            data-slot="button"
            data-testid="activate-subscription-btn"
          >
            Abonnieren
          </button>
        </div>
      </div>
      <div
        class="bg-card text-card-foreground gap-6 rounded-xl border py-6 relative flex flex-col shadow-xl ring-2 ring-primary"
        data-slot="card"
        data-testid="pricing-plan"
      >
        <span
          class="inline-flex items-center justify-center rounded-full border text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground [a&]:hover:bg-primary/90 absolute -top-3.5 left-1/2 -translate-x-1/2 gap-1.5 px-3 py-1"
          data-slot="badge"
          data-testid="popular-badge"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star h-3 w-3 fill-current"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
          Beliebtester
        </span>
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 pb-4"
          data-slot="card-header"
        >
          <div
            class="font-semibold text-2xl"
            data-slot="card-title"
          >
            name-1
          </div>
          <div
            class="text-muted-foreground text-sm"
            data-slot="card-description"
          >
            description-1
          </div>
        </div>
        <div
          class="px-6 flex flex-1 flex-col gap-6"
          data-slot="card-content"
        >
          <div>
            <div
              class="flex items-baseline gap-1.5"
            >
              <span
                class="text-4xl font-bold"
              >
                CHF 
                99.99
              </span>
              <span
                class="text-sm text-muted-foreground"
              >
                /
                Jahr
              </span>
            </div>
          </div>
          <ul
            class="space-y-3"
            data-testid="features"
          >
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 5 Prompts
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Bis zu 3 Bibliotheks-Einträge
              </span>
            </li>
            <li
              class="flex items-center gap-2.5"
              data-testid="feature"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check h-4 w-4 shrink-0 text-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
              <span
                class="text-sm"
              >
                Zugang zum Marktplatz
              </span>
            </li>
          </ul>
        </div>
        <div
          class="flex items-center px-6 [.border-t]:pt-6"
          data-slot="card-footer"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer"
            data-slot="button"
            data-testid="activate-subscription-btn"
          >
            Abonnieren
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
